增加几个组件

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 document.addEventListener('DOMContentLoaded', setBodyFontSize)
                 }
             }
-            setBodyFontSize();
+           // setBodyFontSize();
 
             // set 1rem = viewWidth / 10
             function setRemUnit () {
